--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<h1>hello</h1>
 	<a href="Typing-game/game.html">打字游戏</a>
 	<a href="editor/editor.html">富文本编辑器</a>
+	<a href="countdown/index.html">倒计时</a>
 </body>
 </html>
