modify the time

--- a/countdown/index.html
+++ b/countdown/index.html
@@ -47,7 +47,7 @@
 			<!--btn-->
 			<div class="btn"><span class="txt">留下手机号，排队赢取内测先机</span><span class="red">GOAL!</span></div>
 			<!--share-->
-			<div id="share"></div>
+			<!-- <div id="share"></div> -->
 			<!-- 分享文案 -->
 			<div id="sharetxt" style="display:none;"></div>
 			<div id="shareimg" style="display:none;"></div>
